Properly handle external sites

--- a/pesbuk/pesbuk.qrc
+++ b/pesbuk/pesbuk.qrc
@@ -28,6 +28,7 @@
         <file>components/HorizontalSwipeHandle.qml</file>
         <file>components/Haptics.qml</file>
         <file>components/ScrollPositioner.qml</file>
+        <file>components/ExternalDialog.qml</file>
         <file>components/NavHistoryPopup.qml</file>
         <file>components/NotificationIndicator.qml</file>
         <file>components/applicationheader/HeaderActions.qml</file>
@@ -38,7 +39,6 @@
         <file>components/settingspage/ComboBoxItem.qml</file>
         <file>components/settingspage/RadioButtonsItem.qml</file>
         <file>components/settingspage/SpinRange.qml</file>
-        <file>components/aboutpage/ExternalDialog.qml</file>
         <file>components/aboutpage/IconComponent.qml</file>
         <file>components/aboutpage/NavigationItem.qml</file>
         <file>components/aboutpage/SectionItem.qml</file>
@@ -51,6 +51,7 @@
         <file>js/fb-no-appbanner.js</file>
         <file>js/fb-no-header.js</file>
         <file>js/notifier.js</file>
+        <file>js/UrlUtils.js</file>
         <file>MediaAccessDialog.qml</file>
         <file>MimeTypeMapper.js</file>
         <file>OpenDialog.qml</file>
